Fixes RNL